
This document is a list of user visible feature changes made between
releases except for bug fixes.

Note that each entry is kept so brief that no reason behind or
reference information is supplied with.  For a full list of changes
with all sufficient information, see the ChangeLog file or Redmine
(e.g. <tt>https://bugs.ruby-lang.org/issues/$FEATURE_OR_BUG_NUMBER</tt>)

== Changes since the 2.4.0 release

=== Language changes

* Top-level constant look-up is removed.  [Feature #11547]

* rescue/else/ensure are allowed inside do/end blocks.  [Feature #12906]

=== Core classes updates (outstanding ones only)

* Array

  * Array#append  [Feature #12746]
  * Array#prepend  [Feature #12746]

* Integer

  * Integer.sqrt  [Feature #13219]

* IO

  * IO#pread  [Feature #4532]
  * IO#pwrite  [Feature #4532]

* IOError

  * exception message "stream closed" is changed  [Bug #13405]

* Regexp
  * Update Onigmo 6.1.1.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82

* Thread

  * Thread#fetch  [Feature #13009]

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]

=== Stdlib updates (outstanding ones only)

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.

=== Compatibility issues (excluding feature bug fixes)

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].

=== Stdlib compatibility issues (excluding feature bug fixes)

=== C API updates

=== Supported platform changes

=== Implementation improvements

* (This might not be a "user visible feature change" but) Hash class's
  hash function is now SipHash13. [Feature #13017]

* SecureRandom now prefers OS-provided sources than OpenSSL. [Bug #9569]

=== Miscellaneous changes